# n64cartreader

./: .gitignore  GSPRO33.z64  N64.ino  README.md  main_pcb.kicad_pcb  options.h  test.txt
code/: Cart_Reader.ino  N64.ino
enclosure/board/stl/: n64_board-bottom.stl  n64_board-top.stl
enclosure/shield/stl/: n64_shield-bottom.stl  n64_shield-top.stl
firmware/rp2040/: CMakeLists.txt  build.bat  flash.bat
firmware/rp2040/include/app/: cli.h
firmware/rp2040/include/bus/: ad_bus.h  joybus.h
firmware/rp2040/include/cli/: cmd_test.h  command.h  core.h  io.h  menu.h  menu_definitions.h  plugin_n64.h  plugin_test.h  plugins.h
firmware/rp2040/include/devices/: cartridge.h  controller.h
firmware/rp2040/include/n64/: pins.h
firmware/rp2040/include/n64/bus/: adbus.h  joybus.h
firmware/rp2040/include/n64/devices/: controller.h  gamepak.h
firmware/rp2040/include/utils/: byteswap.h  crc.h  format.h  packet.h  parser.h  transport.h
firmware/rp2040/src/: main.c  tusb_config.h
firmware/rp2040/src/app/: cli.c  main.c
firmware/rp2040/src/bus/: ad_bus.c  joybus.c
firmware/rp2040/src/cli/: cmd_test.c  command.c  core.c  io_pico.c  menu.c  menu_definitions.c  plugin_n64.c  plugin_test.c  plugins.c
firmware/rp2040/src/devices/: cartridge.c  controller.c
firmware/rp2040/src/n64/bus/: adbus.c  joybus.c
firmware/rp2040/src/n64/devices/: controller.c  gamepak.c
firmware/rp2040/src/usb/: filesystem.c  filesystem.h  msc_disk.c  usb_descriptors.c
firmware/rp2040/src/utils/: crc.c  format.c  packet.c  parser.c  transport.c
firmware/src/: Cart_Reader.ino  N64.ino
hardware/adapter/kicad/: adapter.kicad_pcb  adapter.kicad_pro
hardware/board/kicad/: board_pcb.kicad_pcb  board_pcb.kicad_prl  board_pcb.kicad_pro
hardware/shield/kicad/: shield.kicad_pcb  shield.kicad_pro  shield.kicad_sch
host-tools/: android-serial-settings.txt  pylisten.py  serial_test.c  serial_test.py
pcb/: main_pcb.kicad_pcb  proto.kicad_pcb
